--- a/index.html
+++ b/index.html
@@ -42,6 +42,21 @@
     </header>
 
 
+    <main>
+        <img src="images/UltraMono.svg">
+        <p>25 september 2020</p>
+
+
+
+
+    </main>
+
+
+
+
+
+
+
 
     <!-- FOOTER -->
     <footer>
