--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Mauro de Langen">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mauro</title>
+    <title>IDLES Band</title>
     <link href="styles/style.css" rel="stylesheet">
 
 </head>
