--- a/index.html
+++ b/index.html
@@ -35,17 +35,28 @@
         </label>
 
         <div>
-            <img src="images/basket.svg">
             <img src="images/Profile.svg">
+            <img src="images/basket.svg">
+
         </div>
 
     </header>
 
 
     <main>
+
         <img src="images/UltraMono.svg">
+
         <p>25 september 2020</p>
 
+        <a href="#">out now</a>
+
+        <section>
+            <a href="#"><img src="images/logo-spotify.png"></a>
+            <a href="#"><img src="images/logo-apple-music.png"></a>
+        </section>
+
+        <a href="#">Choose your preferred streaming platform</a>
 
 
 
