--- a/index.html
+++ b/index.html
@@ -45,18 +45,58 @@
 
     <main>
 
-        <img src="images/UltraMono.svg">
+        <! -------------------LANDING------------------>
+            <section>
+                <img src="images/UltraMono.svg">
 
-        <p>25 september 2020</p>
+                <p>25 september 2020</p>
 
-        <a href="#">out now</a>
+                <a href="#">out now</a>
 
-        <section>
-            <a href="#"><img src="images/logo-spotify.png"></a>
-            <a href="#"><img src="images/logo-apple-music.png"></a>
-        </section>
+                <div>
+                    <a href="#"><img src="images/logo-spotify.png"></a>
+                    <a href="#"><img src="images/logo-apple-music.png"></a>
+                </div>
 
-        <a href="#">Choose your preferred streaming platform</a>
+                <a href="#">Choose your preferred streaming platform</a>
+            </section>
+
+            <! -------------------Latest video------------------>
+
+                <section>
+                    <span>Latest video</span>
+
+                    <iframe src="https://www.youtube.com/embed/BLcM3fq6Quk?start=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                    <a href="#">listen</a>
+                </section>
+
+                <section>
+                    <span>Bundles</span>
+
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <a href="#">all bundles</a>
+
+                </section>
+
+ <section>
+                    <span>Merchandise</span>
+
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <a href="#">Shop all</a>
+
+                </section>
+
+
+
+
+
 
 
 
